--- a/src/components/pages/vocabulary/index.css
+++ b/src/components/pages/vocabulary/index.css
@@ -76,3 +76,102 @@
 .card__example-translate {
   margin-top: 5px;
 }
+.navigation {
+  position: fixed;
+  background-color: #2a3950;
+  bottom: 0;
+  width: 100%;
+  height: 120px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.nav-left {
+  margin: auto 0;
+}
+.book-page-nav-logo {
+  background-image: url("./../../../assets/vocabulary/home.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 80px;
+  height: 80px;
+}
+.book-page-pagination {
+  display: flex;
+}
+.book-page-number-page {
+  margin: auto;
+  font-size: 20px;
+  font-style: oblique;
+  font-family: cursive;
+  width: 160px;
+  text-align: center;
+  color: azure;
+}
+.select-partition {
+  width: 80px;
+  height: 70px;
+  font-size: 20px;
+  text-align: center;
+  margin-top: 30px;
+  margin-right: 30px;
+  border-radius: 50px;
+}
+.select-partition option {
+  font-size: 12px;
+  line-height: 25px;
+}
+.book-page-nav-savannah,
+.book-page-nav-audio {
+  display: block;
+  background: url("./../../../assets/vocabulary/vector.png") no-repeat;
+  width: 75px;
+  height: 90px;
+  position: relative;
+}
+.book-page-nav-savannah div,
+.book-page-nav-audio div {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  border-radius: 50px;
+  top: 8px;
+  left: 6px;
+}
+.book-page-nav-savannah div {
+  background: url("./../../../assets/vocabulary/icon-2.png") no-repeat;
+  background-size: cover;
+}
+.book-page-nav-audio div {
+  background: url("./../../../assets/vocabulary/icon-4.jpg") no-repeat;
+  background-size: cover;
+}
+.book-page-nav-audio span,
+.book-page-nav-savannah span {
+  position: absolute;
+  bottom: 0;
+  font-size: 20px;
+  font-style: oblique;
+  font-family: cursive;
+  top: 88px;
+  color: azure;
+}
+.book-page-nav-audio span {
+  right: -20px;
+}
+.pagination-prev,
+.pagination-next {
+  width: 70px;
+  height: 70px;
+  background-size: contain;
+  margin: auto;
+}
+.pagination-prev {
+  background-image: url("./../../../assets/vocabulary/prev.png");
+  background-repeat: no-repeat;
+}
+.pagination-next {
+  background-image: url("./../../../assets/vocabulary/next.png");
+  background-repeat: no-repeat;
+}
