--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,27 @@
+@font-face {
+  font-family: Forum;
+  src: url("assets/fonts/Forum/Forum-Regular.ttf");
+}
+
+@font-face {
+  font-family: Roboto;
+  src: url("assets/fonts/Roboto/Roboto-Thin.ttf");
+  font-weight: 100;
+}
+
 body {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  margin: 0;
+  padding: 0;
   background-color: darkslategrey;
   color: white;
-  text-transform: uppercase;
 }
+
+main {
+  min-width: 100vw;
+  height: calc(100vh - 120px);
+  background-image: url('assets/img/bg.png');
+  background-size: cover;
+  background-position-y: -50px;
+  background-attachment: fixed;
+}
+
