--- a/src/components/pages/main/index.css
+++ b/src/components/pages/main/index.css
@@ -13,6 +13,10 @@ header a {
   color: white;
 }
 
+.links {
+  margin: 20px;
+}
+
 .logo-img {
   width: 60%;
   margin-top: -11px;
@@ -102,4 +106,114 @@ h1 {
 .mp-detail:hover {
   border: 1px solid rgba(109, 243, 236, 0.4);
   background-color: rgb(7, 104, 99);
+}
+
+.burger-menu {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .links {
+    display: none;
+  }
+
+  .burger-menu {
+    display: block;
+  }
+
+  .menu-btn{
+    display: flex;
+    align-items: center;
+    position: absolute;
+    width: 32px;
+    height: 18px;
+    cursor: pointer;
+    z-index: 1;
+  }
+
+  .menu-btn > span,
+  .menu-btn > span::before,
+  .menu-btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #ffffff;
+    transition-duration: .25s;
+  }
+  .menu-btn > span::before {
+    content: '';
+    top: -8px;
+  }
+  .menu-btn > span::after {
+    content: '';
+    top: 8px;
+  }
+
+  .menubox {
+    display: block;
+    position: absolute;
+    z-index: 10;
+    visibility: hidden;
+    top: 60px;
+    right: 100%;
+    width: 300px;
+    height: calc(100% - 210px);
+    margin: 0;
+    padding: 45px 0;
+    list-style: none;
+    background-color: rgb(18, 109, 104);
+    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+    transition-duration: .25s;
+  }
+
+  .menu-item {
+    display: block;
+    padding: 25px 24px 24px 50px;
+    left: 95px;
+    top: 310px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 23px;
+    letter-spacing: 2px;
+    color: rgb(255, 255, 255);
+    background: url(./../../../assets/svg/arrow-burger.svg) no-repeat;
+    background-position: 19px 28px;
+    text-decoration: none;
+    transition-duration: .25s;
+  }
+
+  .menu-item:hover {
+    background-color: #CFD8DC;
+  }
+
+  #menu-toggle{
+    opacity: 0;
+  }
+
+  #menu-toggle:checked ~ .menu-btn > span{
+    transform: rotate(45deg);
+  }
+  #menu-toggle:checked ~ .menu-btn > span::before{
+    top: 0;
+    transform: rotate(0);
+  }
+  #menu-toggle:checked ~ .menu-btn > span::after{
+    top: 0;
+    transform: rotate(90deg);
+  }
+  #menu-toggle:checked ~ .menubox{
+    visibility: visible;
+    left: 0;
+  }
+
+  .mp-description {
+    width: 45%;
+  }
+
+  .personal-information a {
+    font-size: 0.8rem;
+  }
 }
