--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,5 @@
 body {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: darkslategrey;
-  color: white;
-  text-transform: uppercase;
+  margin: 0;
+  background-color: rgb(245, 252, 252);
 }
