--- a/src/components/pages/vocabulary/index.css
+++ b/src/components/pages/vocabulary/index.css
@@ -1,4 +1,4 @@
-* {
+.book-page * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -11,8 +11,9 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  padding-bottom: 100px;
+  padding-bottom: 50px;
   background-color: #a5e8d6;
+  padding-left: 150px;
 }
 .book-word-image {
   height: 200px;
@@ -76,17 +77,16 @@
 .card__example-translate {
   margin-top: 5px;
 }
+
 .navigation {
   position: fixed;
   background-color: #2a3950;
   bottom: 0;
-  width: 100%;
-  height: 120px;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  display: flex;
-  justify-content: space-between;
+  width: 150px;
+  height: 100%;
+  padding-top: 60px;
 }
+
 .nav-left {
   margin: auto 0;
 }
@@ -96,9 +96,10 @@
   background-size: contain;
   width: 80px;
   height: 80px;
+  margin: 0 auto;
 }
 .book-page-pagination {
-  display: flex;
+  margin: 150px 0;
 }
 .book-page-number-page {
   margin: auto;
@@ -106,8 +107,12 @@
   font-style: oblique;
   font-family: cursive;
   width: 160px;
-  text-align: center;
+  /*   text-align: center; */
   color: azure;
+}
+.nav-right {
+  margin-top: 100px;
+  margin-left: 35px;
 }
 .select-partition {
   width: 80px;
@@ -131,7 +136,8 @@
   width: 63px;
   height: 77px;
   position: relative;
-  margin-top: 10px;
+  margin: 0 auto;
+  margin-top: 130px;
 }
 .book-page-nav-savannah div,
 .book-page-nav-audio div {
@@ -178,11 +184,14 @@
   background-image: url("./../../../assets/vocabulary/next.png");
   background-repeat: no-repeat;
 }
+.footer-book-page {
+  height: 185px;
+}
 @media screen and (max-width: 768px) {
-  .book-page-nav-logo {
+  /*   .book-page-nav-logo {
     width: 60px;
     height: 60px;
-  }
+  } */
   .book-page-nav-audio span,
   .book-page-nav-savannah span {
     font-size: 16px;
@@ -199,9 +208,32 @@
     font-size: 18px;
   }
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 600px) {
+  .navigation {
+    width: 100px;
+  }
+  .container__book-page {
+    padding-left: 100px;
+  }
+  .book-page-number-page {
+    font-size: 14px;
+  }
+  .book-word-item {
+    width: 350px;
+  }
   .word-img {
-    width: 280px;
+    width: 320px;
+  }
+  .nav-right {
+    margin-left: 10px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .book-word-item {
+    width: 300px;
+  }
+  .word-img {
+    width: 250px;
     height: 200px;
   }
   .book-word-item {
