--- a/src/components/pages/main/index.css
+++ b/src/components/pages/main/index.css
@@ -3,6 +3,7 @@ header {
   height: 60px;
   display: flex;
   justify-content: space-around;
+  background-color: darkslategrey;
 }
 
 header a {
@@ -24,6 +25,7 @@ header a {
 
 footer {
   height: 60px;
+  background-color: darkslategrey;
 }
 
 .personal-information {
