--- a/src/components/pages/registration/index.css
+++ b/src/components/pages/registration/index.css
@@ -21,7 +21,7 @@
   visibility: hidden;
   overflow-y: auto;
   overflow-x: hidden;
-  transition: all 0.8s ease 0s;
+  transition: all 0.6s ease 0s;
   z-index: 1;
 }
 
@@ -101,6 +101,10 @@
 
 .form {
   color: var(--font-color-light);
+}
+
+#registration {
+  display: none;
 }
 
 .input-block__wrapper {
