--- a/src/components/pages/vocabulary/index.css
+++ b/src/components/pages/vocabulary/index.css
@@ -11,9 +11,8 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  padding-bottom: 50px;
+  padding-bottom: 100px;
   background-color: #a5e8d6;
-  padding-left: 150px;
 }
 .book-word-image {
   height: 200px;
@@ -77,16 +76,17 @@
 .card__example-translate {
   margin-top: 5px;
 }
-
 .navigation {
   position: fixed;
   background-color: #2a3950;
   bottom: 0;
-  width: 150px;
-  height: 100%;
-  padding-top: 60px;
+  width: 100%;
+  height: 120px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  display: flex;
+  justify-content: space-between;
 }
-
 .nav-left {
   margin: auto 0;
 }
@@ -99,7 +99,7 @@
   margin: 0 auto;
 }
 .book-page-pagination {
-  margin: 150px 0;
+  display: flex;
 }
 .book-page-number-page {
   margin: auto;
@@ -107,12 +107,8 @@
   font-style: oblique;
   font-family: cursive;
   width: 160px;
-  /*   text-align: center; */
+  text-align: center;
   color: azure;
-}
-.nav-right {
-  margin-top: 100px;
-  margin-left: 35px;
 }
 .select-partition {
   width: 80px;
@@ -136,8 +132,7 @@
   width: 63px;
   height: 77px;
   position: relative;
-  margin: 0 auto;
-  margin-top: 130px;
+  margin-top: 10px;
 }
 .book-page-nav-savannah div,
 .book-page-nav-audio div {
@@ -184,9 +179,9 @@
   background-image: url("./../../../assets/vocabulary/next.png");
   background-repeat: no-repeat;
 }
-.footer-book-page {
+/* .footer-book-page {
   height: 185px;
-}
+} */
 @media screen and (max-width: 768px) {
   /*   .book-page-nav-logo {
     width: 60px;
