feat: apply eslint and refactor some code

--- a/src/style.css
+++ b/src/style.css
@@ -9,19 +9,20 @@
   font-weight: 100;
 }
 
-body {
+* {
   margin: 0;
   padding: 0;
-  background-color: darkslategrey;
+  box-sizing: border-box;
+}
+
+body {
+  /* background-color: #2a3950; */
   color: white;
 }
 
 main {
-  min-width: 100vw;
-  height: calc(100vh - 120px);
+  min-height: calc(100vh - 120px);
   background-image: url('assets/img/bg.png');
   background-size: cover;
-  background-position-y: -50px;
-  background-attachment: fixed;
 }
 
