--- a/src/components/pages/vocabulary/index.css
+++ b/src/components/pages/vocabulary/index.css
@@ -1,8 +1,3 @@
-.book-page * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 .book-page {
   position: relative;
 }
@@ -11,7 +6,6 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  padding-bottom: 100px;
   background-color: #a5e8d6;
 }
 .book-word-image {
@@ -77,11 +71,12 @@
   margin-top: 5px;
 }
 .navigation {
-  position: fixed;
-  background-color: #2a3950;
-  bottom: 0;
+  /* position: fixed; */
+  background-color:#a5e8d6;
+  /* bottom: 0; */
   width: 100%;
   height: 120px;
+  padding: 0 18px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   display: flex;
@@ -116,7 +111,7 @@
   font-size: 20px;
   text-align: center;
   margin-top: 30px;
-  margin-right: 30px;
+  margin-right: 15px;
   border-radius: 50px;
 }
 .select-partition option {
