--- a/src/components/pages/main/index.css
+++ b/src/components/pages/main/index.css
@@ -180,14 +180,13 @@ h1 {
     visibility: hidden;
     top: 60px;
     right: 100%;
-    width: 300px;
-    height: calc(100% - 210px);
+    width: 100vw;
     margin: 0;
     padding: 45px 0;
     list-style: none;
     background-color: rgb(18, 109, 104);
     box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
-    transition-duration: 0.25s;
+    transition: all 1s ease-in;
   }
 
   .menu-item {
