feat: create page About Team

--- a/src/components/pages/main/index.css
+++ b/src/components/pages/main/index.css
@@ -69,6 +69,7 @@ footer {
 }
 
 h1 {
+  margin: 10px;
   font-family: Forum;
   font-size: 3rem;
   font-weight: 800;
@@ -82,6 +83,7 @@ h1 {
 }
 
 .mp-text {
+  margin: 20px;
   font-family: Roboto;
   font-size: 1.3rem;
   font-weight: 500;
@@ -130,7 +132,6 @@ h1 {
   min-height: calc(100vh - 125px);
   background-image: url("./../../../assets/img/bg.png");
   background-size: cover;
-  background-position-y: -50px;
   background-attachment: fixed;
   color: white;
 }
@@ -186,7 +187,29 @@ h1 {
     list-style: none;
     background-color: rgb(18, 109, 104);
     box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
-    transition: all 1s ease-in;
+    transform: translateX(-100vw);
+  }
+
+  @keyframes burgerIn {
+    0% {
+      opacity: 0;
+      transform: translateX(-100vw);
+    }
+    100% {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+
+  @keyframes burgerOut {
+    0% {
+      opacity: 1;
+      transform: translateX(0);
+    }
+    100% {
+      opacity: 0;
+      transform: translateX(-100vw);
+    }
   }
 
   .menu-item {
