feat: add photo in avatar, styles for 1024px

--- a/src/components/pages/about-us/index.css
+++ b/src/components/pages/about-us/index.css
@@ -114,3 +114,21 @@
 .avatar-github:hover {
   color: #2959a0;
 }
+
+@media (max-width: 1024px) {
+  .advantages {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .about-advantages {
+    width: 40%;
+    height: 400px;
+  }
+
+  .avatar-item {
+    width: 80%;
+  }
+}
