refactor: styles for main and registrarion page, add adaptive

--- a/src/components/pages/main/index.css
+++ b/src/components/pages/main/index.css
@@ -1,37 +1,54 @@
-:root {
-  --bg-dark: #2a3950;
-  --bg-light: #ffffff;
-  --font-light: #ffffff;
-  --font-dark: #000000;
+.wrapper-main-page {
+  min-width: 100vw;
+  min-height: calc(100vh - 130px);
+  background-image: url("./../../../assets/img/bg.png");
+  background-size: cover;
+  background-position-y: -50px;
+  background-attachment: fixed;
+  color: white;
 }
 
 header {
+  position: relative;
   width: 100%;
   height: 60px;
+  padding-top: 10px;
   display: flex;
   justify-content: space-around;
+  align-items: center;
   background-color: var(--bg-dark);
 }
 
-header a {
-  margin: 20px;
-  font-size: 1.2rem;
-  text-transform: uppercase;
+a {
+  font-size: 1.4rem;
+  text-transform: capitalize;
   text-decoration: none;
-  color: var(--font-light);
+  color: var(--font-color-light);
+  cursor: pointer;
+  transition: 0.4s;
 }
 
-.links {
-  margin: 20px;
+a:hover {
+  color: var(--font-color-green);
 }
 
-.logo-img {
-  width: 60%;
-  margin-top: -11px;
+.mp-home__logo {
+  font-size: 38px;
+  font-weight: 700;
+  margin-bottom: 5px;
+  color: var(--bg-btn);
+}
+
+.mp-home__logo span {
+  font-size: 48px;
+  color: var(--font-color-light);
+}
+
+.links a {
+  margin: 0 20px;
 }
 
 footer {
-  padding-bottom: 5px;
   height: 60px;
   background-color: var(--bg-dark);
 }
@@ -46,17 +63,25 @@ footer {
 }
 
 .personal-information a {
-  text-decoration: none;
-  color: var(--font-light);
+  font-family: Forum;
+}
+
+.personal-information p {
+  margin: 0 10px;
 }
 
 .copyright {
-  color: var(--font-light);
+  color: var(--font-color-light);
 }
 
 .rsschool img {
   width: 100%;
   height: 35px;
+  transition: 0.3s;
+}
+
+.rsschool img:hover {
+  filter: invert(40%) sepia(100%) saturate(290%)  hue-rotate(130deg) brightness(89%) contrast(80%);
 }
 
 .mp-description {
@@ -70,72 +95,105 @@ footer {
 
 h1 {
   font-family: Forum;
-  font-size: 3rem;
-  font-weight: 800;
+  font-size: 3.3rem;
+  font-weight: 700;
   color: rgb(12, 184, 169);
   text-align: center;
   text-transform: uppercase;
 }
 
 .mp-title {
-  color: rgb(10, 78, 73);
+  font-size: 3rem;
+  color: var(--font-color-dark);
+  text-transform: uppercase;
+}
+
+.mp-title span:first-of-type {
+  font-size: 3.8rem;
+  color: rgb(12, 184, 169);
+}
+
+.mp-title span:last-of-type {
+  text-transform: lowercase;
 }
 
 .mp-text {
-  font-family: Roboto;
   font-size: 1.3rem;
-  font-weight: 500;
+  font-weight: 400;
   text-align: justify;
+  padding: 20px 0 55px;
+  color: var(--font-color-dark);
+}
+
+.login-block {
+  display: flex;
+  align-items: center;
+}
+
+.login-block__wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.login-block__img {
+  width: 32px;
+  height: 32px;
+}
+
+.login-block__img path{
+  fill: var(--font-color-green);
+}
+
+.login-block__name {
+  font-size: 20px;
+  color: var(--font-color-light);
+  padding: 0 40px 0 10px;
 }
 
 .mp-detail,
 .login {
   display: block;
-  width: 100px;
-  margin: 0 auto;
-  padding: 10px 40px;
-  color: #fff;
-  font-family: Roboto;
+  width: 120px;
+  height: 44px;
   font-size: 1rem;
-  text-transform: uppercase;
-  text-decoration: none;
-  cursor: pointer;
-  background-color: rgba(0, 0, 0, 0.4);
-  border: 1px solid rgba(7, 104, 99, 0.4);
+  font-weight: bold;
+  color: var(--font-color-dark);
+  background-color: var(--bg-btn);
+  border: 1.5px solid #FFFFFF;
+  box-shadow: 3px 3px 10px rgba(0, 224, 199, 0.25);
   border-radius: 10px;
-  transition: all 0.2s ease-in;
+  cursor: pointer;
+  transition: all 0.6s;
 }
 
-.login {
-  width: 50px;
-  margin: 0.5rem;
-  padding: 10px 20px;
-  background-color: rgba(16, 230, 219, 0.4);
+.mp-detail {
+  width: 180px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--font-color-light);
+  background-color: var(--bg-dark);
 }
 
 .login:hover,
-.login:active,
+.login:active {
+  background-color: var(--bg-btn-hover);
+  color: var(--font-color-disabled);
+}
+
 .mp-detail:active,
 .mp-detail:hover {
-  border: 1px solid rgba(109, 243, 236, 0.4);
-  background-color: rgb(7, 104, 99);
+  color: var(--font-color-disabled);
+  background-color: var(--bg-btn);
+  border-color: var(--bg-dark);
 }
 
 .burger-menu {
   display: none;
 }
 
-.wrapper-main-page {
-  min-width: 100vw;
-  min-height: calc(100vh - 125px);
-  background-image: url("./../../../assets/img/bg.png");
-  background-size: cover;
-  background-position-y: -50px;
-  background-attachment: fixed;
-  color: white;
-}
-
-@media (max-width: 768px) {
+@media (max-width: 960px) {
   .links {
     display: none;
   }
@@ -145,9 +203,11 @@ h1 {
   }
 
   .menu-btn {
+    position: absolute;
+    top: 45%;
+    margin: 0 15px;
     display: flex;
     align-items: center;
-    position: absolute;
     width: 32px;
     height: 18px;
     cursor: pointer;
@@ -176,10 +236,10 @@ h1 {
   .menubox {
     display: block;
     position: absolute;
+    left: 0;
     z-index: 10;
     visibility: hidden;
-    top: 60px;
-    right: 100%;
+    top: 70px;
     width: 300px;
     height: calc(100% - 210px);
     margin: 0;
@@ -213,6 +273,9 @@ h1 {
   }
 
   #menu-toggle {
+    width: 32px;
+    height: 32px;
+    margin: 0 15px;
     opacity: 0;
   }
 
@@ -237,6 +300,102 @@ h1 {
   }
 
   .personal-information a {
-    font-size: 0.8rem;
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 639px) {
+  footer {
+    height: auto;
+  }
+
+  .login-block__wrapper {
+    display: none;
+  }
+
+  #root {
+    min-height: calc(100vh - 70px - 188px);
+  }
+
+  .wrapper-main-page {
+    min-height: calc(100vh - 70px - 188px);
+  }
+
+  .mp-description {
+    max-width: 80%;
+  }
+
+  h1 {
+    font-size: 2.3rem;
+  }
+
+  .mp-text {
+    font-size: 1.1rem;
+    padding: 15px 0 25px;
+  }
+  
+  .personal-information {
+    flex-direction: column;
+  }
+
+  .personal-information p {
+    padding-bottom: 10px;
+  }
+}
+
+@media (max-width: 440px) {
+  header {
+    flex-direction: column;
+    height: auto;
+    padding-bottom: 20px;
+  }
+
+  #root {
+    min-height: calc(100vh - 134px - 189px);
+  }
+
+  .wrapper-main-page {
+    min-width: 100%;
+    min-height: calc(100vh - 134px - 189px);
+  }
+
+  .mp-description {
+    box-sizing: border-box;
+    max-width: 100%;
+    width: 90%;
+  }
+  
+  .login-block {
+    width: 100%;
+    justify-content: space-around;
+    align-content: center;
+  }
+
+  .menu-btn {
+    top: 85px;
+  }
+}
+
+@media (max-width: 350px) {
+  h1 {
+    font-size: 1.8rem;
+  }
+
+  .mp-text {
+    font-size: 0.9rem;
+    padding: 12px 0 18px;
+  }
+
+  .mp-title {
+    font-size: 2.4rem;
+  }
+
+  .mp-title span:first-of-type {
+    font-size: 3rem;
+  }
+
+  .mp-description {
+    margin: 0;
+    padding: 18px;
   }
 }
