--- a/src/components/pages/registration/index.css
+++ b/src/components/pages/registration/index.css
@@ -1,15 +1,3 @@
-:root {
-  --bg-dark: #2A3950;
-  --bg-light: #ffffff;
-  --radius: 4px;
-  --font-color-light:  #ffffff;
-  --font-color-dark:  #2A3950;
-  --font-color-disabled: #006270;
-  --font-color-error: #e90e24;
-  --bg-btn: #00E0C7;
-  --bg-btn-hover: #b1f7ee;
-}
-
 .popup-signIn {
   position: fixed;
   top: 0;
@@ -142,9 +130,11 @@
 }
 
 .form__link-block {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  padding-top: 15px;
+}
+
+.form__link-block p {
+  padding-bottom: 5px;
 }
 
 .form__link-block a {
@@ -194,4 +184,25 @@
 
 .visible {
   visibility: visible;
+}
+
+@media (max-width: 600px) {
+  .popup__content {
+    display: block;
+  }
+
+  .popup-left-block  h2 {
+    font-size: 40px;
+    margin-top: 30px;
+    margin-bottom: 15px;
+  }
+
+  .popup-left-block p {
+    font-size: 18px;
+    margin-bottom: 30px;
+  }
+
+  .popup-right-block {
+    width: 100%;
+  }
 }
