--- a/src/components/pages/vocabulary/index.css
+++ b/src/components/pages/vocabulary/index.css
@@ -1,6 +1,17 @@
 .book-page {
   position: relative;
+  animation: bookPage 0.7s ease-in;
 }
+
+@keyframes bookPage {
+  0% {
+    opacity: 0;
+  };
+  100% {
+    opacity: 1;
+  };
+}
+
 .container__book-page {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   display: flex;
