--- a/src/components/pages/vocabulary/index.css
+++ b/src/components/pages/vocabulary/index.css
@@ -6,10 +6,10 @@
 @keyframes bookPage {
   0% {
     opacity: 0;
-  };
+  }
   100% {
     opacity: 1;
-  };
+  }
 }
 
 .container__book-page {
@@ -57,6 +57,9 @@
 .card__example,
 .card__meaning {
   font-size: 12px;
+}
+.card__buttons {
+  /*  visibility: hidden;*/
 }
 .card__btn-adddifficult,
 .card__btn-deldifficult {
@@ -112,12 +115,11 @@
   color: azure;
 }
 .select-partition {
-  width: 80px;
+  width: 106px;
   height: 70px;
   font-size: 20px;
   text-align: center;
   margin-top: 30px;
-  margin-right: 15px;
   border-radius: 50px;
 }
 .select-partition option {
