--- a/src/components/pages/vocabulary/index.css
+++ b/src/components/pages/vocabulary/index.css
@@ -92,6 +92,7 @@
   margin: auto 0;
 }
 .book-page-nav-logo {
+  display: block;
   background-image: url("./../../../assets/vocabulary/home.png");
   background-repeat: no-repeat;
   background-size: contain;
