--- a/src/components/pages/main/index.css
+++ b/src/components/pages/main/index.css
@@ -244,6 +244,7 @@ h1 {
   }
 
   .menubox {
+    box-sizing: border-box;
     left: 0;
     z-index: 1;
     /* visibility: hidden; */
@@ -251,7 +252,7 @@ h1 {
     left: -1000px;
     width: 100vw;
     margin: 0;
-    padding: 45px 0;
+    padding: 0px 50px;
     list-style: none;
     background-color: rgb(18, 109, 104);
     box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
@@ -282,7 +283,7 @@ h1 {
   .menu-item {
     box-sizing: border-box;
     display: block;
-    padding: 25px 24px 24px 50px;
+    padding: 30px 24px 30px 40px;
     left: 95px;
     top: 310px;
     font-family: Roboto;
@@ -293,14 +294,18 @@ h1 {
     letter-spacing: 2px;
     color: rgb(255, 255, 255);
     background: url(./../../../assets/svg/arrow-burger.svg) no-repeat;
-    background-position: 19px 28px;
+    background-position: 0px 35px;
     text-decoration: none;
     transition: 0.6s;
   }
 
+  .menubox li:not(:last-of-type) {
+    border-bottom: 2px solid var(--bg-light);
+  }
+
   .menu-item:hover {
-    color: var(--font-color-dark);
-    background-color: var(--bg-btn-hover);
+    color: var(--font-color-green);
+    /* background-color: var(--bg-btn-hover); */
   }
 
   #menu-toggle {
