--- a/src/components/pages/games-main/index.css
+++ b/src/components/pages/games-main/index.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-around;
   max-width: 100vw;
-  min-height: calc(100vh - 231px);
+  min-height: calc(100vh - 251px);
   background-color: var(--bg-dark);
   background-image: url(./../../../assets/img/bg-map.png);
   background-size: 100% 100%;
@@ -11,7 +11,7 @@
 }
 
 .header-games {
-  padding: 20px;
+  padding: 60px 0 0 0;
   font-family: Forum;
   font-size: 3.3rem;
   font-weight: 700;
@@ -83,7 +83,7 @@
 @media (max-width: 1440px) {
   .wrapper-games-savannah,
   .wrapper-games-audiocall {
-    margin: 100px auto;
+    margin: 80px auto;
   }
 }
 
