feat: add ui audiocall game

--- a/src/components/pages/sprint/index.css
+++ b/src/components/pages/sprint/index.css
@@ -152,6 +152,10 @@
   fill: white;
 }
 
+.sprint__fullscreen-open {
+  fill: white;
+}
+
 /* .sprint__timer-counte {
   animation: counter 60s steps(3, end) forwards;
 } */
