--- a/src/components/pages/audiocall/index.css
+++ b/src/components/pages/audiocall/index.css
@@ -91,6 +91,13 @@
   font-size: 1.3rem;
   font-weight: 400;
   padding: 10px;
+  transition: all 0.6s;
+}
+
+.audiocall-answer:hover {
+  background-color: var(--bg-btn);
+  color: #000000;
+  cursor: pointer;
 }
 
 @media (max-width: 1440px) {
