--- a/src/components/pages/audiocall/index.css
+++ b/src/components/pages/audiocall/index.css
@@ -1,4 +1,7 @@
 .wrapper-audiocall {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100vw;
   min-height: calc(100vh - 130px);
   background: url(./../../../assets/img/bg-audiocall.jpg) no-repeat;
@@ -9,7 +12,12 @@
   display: flex;
   flex-direction: column;
   gap: 50px;
-  padding-top: 285px;
+  height: 500px;
+  width: 80%;
+  margin: 0 auto;
+  padding: 15px;
+  border: 8px dashed rgba(42, 57, 80, 1);
+  background-color: #dffcf5;
 }
 
 .audiocall-btn-block {
@@ -84,13 +92,14 @@
   display: flex;
   justify-content: space-around;
   width: 10vw;
-  height: 20px;
+  height: 45px;
   background-color: rgba(42, 57, 80, 1);
   color: #fff;
   font-family: Forum;
   font-size: 1.3rem;
   font-weight: 400;
   padding: 10px;
+  align-items: center;
   transition: all 0.6s;
 }
 
@@ -106,13 +115,16 @@
   }
 
   .audiocall {
-    padding-top: 200px;
+    padding-top: 120px;
+    height: 300px;
+    gap: 30px;
   }
 }
 
 @media (max-width: 768px) {
   .audiocall {
     padding-top: 150px;
+    height: 650px;
   }
 
   .audiocall-answers {
