--- a/src/components/pages/audiocall/index.css
+++ b/src/components/pages/audiocall/index.css
@@ -41,8 +41,6 @@
 .wrapper-audiocall button {
   padding: 0;
   border: none;
-  font: inherit;
-  color: inherit;
   cursor: pointer;
 }
 
@@ -69,23 +67,20 @@
 .audiocall-next-button {
   display: block;
   margin: 0 auto;
-  width: 150px;
-  height: 44px;
-  font-size: 1rem;
+  width: 200px;
+  height: 50px;
+  font-size: 1.5rem;
   font-family: Forum;
   font-weight: bold;
-  color: var(--font-color-dark);
-  background-color: var(--bg-btn);
-  border: 1.5px solid #FFFFFF;
-  box-shadow: 3px 3px 10px rgb(0 224 199 / 25%);
-  border-radius: 10px;
+  color: #fff;
+  background-color: tomato;
+  border-radius: 4px;
   cursor: pointer;
   transition: all 0.6s;
 }
 
 .audiocall-next-button:hover {
   background-color: rgba(42, 57, 80, 1);
-  color: #FFFFFF;
 }
 
 .audiocall-answer {
