--- a/src/components/pages/levels-games/index.css
+++ b/src/components/pages/levels-games/index.css
@@ -1,17 +1,23 @@
 .wrapper-levels {
   min-height: calc(100vh - 130px);
-  background-image: url(./../../../assets/img/bg-games.jpg);
+  padding: 0 20px;
+  background-image: url(./../../../assets/img/bg-games-levels.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-.wrapper-levels-header,
-.wrapper-desc h2 {
+.wrapper-levels  h1 {
+  margin: 0;
+  padding: 60px 0 30px 0;
+  color: tomato;
+}
+
+.wrapper-levels-header {
   padding: 60px 0 30px 0;
   font-family: Forum;
-  font-size: 3.3rem;
+  font-size: 3rem;
   font-weight: 700;
-  color: rgb(38,66,87);
+  color: var(--font-color-dark);
   text-align: center;
   text-transform: uppercase;
 }
@@ -21,7 +27,7 @@
 }
 
 .wrapper-desc p {
-  padding-top: 20px;
+  padding-bottom: 20px;
   font-size: 2rem;
   font-weight: 400;
   text-align: center;
@@ -33,16 +39,22 @@
   justify-content: space-around;
   flex-direction: row;
   gap: 50px;
-  margin: 50px auto;
+  margin: 0 auto;
+  padding: 40px 0;
+  max-width: 50%;
 }
 
-.level,
 .bg-level {
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  background-color: rgb(38,66,87);
+  background-color:var(--bg-dark);
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  transition: 0.4s;
+}
+
+.level:hover .bg-level {
+  background-color: tomato;
 }
 
 .level {
@@ -52,45 +64,16 @@
 .level span {
   position: absolute;
   top: 20px;
-  left: 39px;
-  font-family: Forum;
+  left: 35px;
   font-size: 3.3rem;
   font-weight: 700;
   color: rgb(255, 255, 255);
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 960px) {
   .wrapper-levels-header {
-    padding-top: 60px;
-  }
-
-  .wrapper-desc p {
-    padding-top: 0px;
-    font-size: 1.3rem;
-  }
-
-  .levels {
-    margin: 0px auto;
-  }
-}
-
-@media (max-width: 1300px) {
-  .wrapper-levels-header {
-    padding-top: 60px;
-  }
-
-  .wrapper-desc p {
-    padding-top: 0px;
-  }
-
-  .levels {
-    margin: 0px auto;
-  }
-}
-
-@media (max-width: 920px) {
-  .wrapper-levels-header {
-    padding-top: 20px;
+    font-size: 2rem;
+    padding-top: 25px;
   }
 
   .wrapper-desc p {
@@ -100,44 +83,42 @@
   .levels {
     flex-direction: row;
     flex-wrap: wrap;
-    width: 450px;
+    max-width: 60%;
   }
 }
 
 @media (max-width: 768px) {
-.level,
-.bg-level {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background-color: rgb(38,66,87);
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
-}
-
-.level span {
-  position: absolute;
-  top: 10px;
-  left: 20px;
-  font-family: Forum;
-  font-size: 1.7rem;
-  font-weight: 700;
-  color: rgb(255, 255, 255);
-}
-
-.levels {
-  flex-direction: row;
-  flex-wrap: nowrap;
-  width: 450px;
-}
-}
-
-@media (max-width: 768px) {
-  .wrapper-levels h2 {
-    font-size: 1.7rem;
-  }
-
   .levels {
     width: 300px;
     flex-wrap: wrap;
+  }
+
+  .level,
+  .bg-level {
+    width:65px;
+    height: 65px;
+  }
+
+  .level span {
+    top: 18px;
+    left: 25px;
+    font-size: 1.7rem;
+  }
+}
+
+@media (max-width: 640px) {
+  .wrapper-levels {
+    min-height: calc(100vh - 258px);
+  }
+
+  .levels {
+    max-width: 90%;
+    padding-top: 0;
+  }
+}
+
+@media (max-width: 440px) {
+  .wrapper-levels {
+    min-height: calc(100vh - 225px);
   }
 }
