--- a/src/components/pages/statistic/index.css
+++ b/src/components/pages/statistic/index.css
@@ -16,14 +16,126 @@
   color: var(--bg-light);
 }
 
+.statistic-table {
+  width: 100%;
+  height: 100%;
+  background-color: #00e0c752;
+  color: white;
+  margin: 0 auto;
+}
+.statistic-table__header {
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  margin: 0 20px;
+}
+.statistic__header-day,
+.statistic__header-all {
+  height: 60px;
+  width: 50%;
+  text-transform: uppercase;
+  font-size: 30px;
+  flex-grow: 1;
+  align-items: center;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  border-bottom: 4px solid #2a39507a;
+  cursor: pointer;
+  font-family: "Forum";
+  letter-spacing: 1.5px;
+  padding: 5px;
+}
+.statistic__header-day.active,
+.statistic__header-all.active {
+  border-bottom: 4px solid white;
+}
+.statistic-table__body {
+  margin: 0 20px;
+  padding-bottom: 40px;
+}
+.statistic-table__body h3 {
+  font-family: "Forum";
+  letter-spacing: 1.5px;
+  margin: 20px;
+  font-size: 40px;
+  font-weight: normal;
+}
+
+.statistic-per-day,
+.statistic-per-sprint,
+.statistic-per-audio {
+  width: 40%;
+  box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%),
+    0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
+  padding: 20px;
+  font-family: "Forum";
+}
+.statistic-per-day {
+  width: 40%;
+}
+.statistic-per-day div,
+.statistic-per-sprint div,
+.statistic-per-audio div {
+  margin: 5px 0;
+  font-family: "Forum";
+}
+
+.statistic-per-sprint h4,
+.statistic-per-audio h4 {
+  margin-bottom: 20px;
+  font-weight: normal;
+  font-size: 32px;
+  font-family: "Forum";
+}
+.statistic-games {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.count-game-day,
+.count-word-learn-day,
+.count-percent-day,
+.count-series-day {
+  display: flex;
+  justify-content: space-between;
+}
+.statistic-per-day .statistic-games {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+@media (max-width: 1200px) {
+  .statistic-per-day,
+  .statistic-per-sprint,
+  .statistic-per-audio {
+    width: 90%;
+  }
+  .statistic-per-audio {
+    margin-top: 40px;
+  }
+}
 @media (max-width: 639px) {
   .statistic-wrapper {
     min-height: calc(100vh - 358px);
+  }
+  .statistic-table__header {
+    flex-direction: column;
+    margin: 0;
+  }
+  .statistic__header-day,
+  .statistic__header-all {
+    font-size: 24px;
   }
 }
 
 @media (max-width: 440px) {
   .statistic-wrapper {
     min-height: calc(100vh - 425px);
+  }
+  .statistic__header-day,
+  .statistic__header-all {
+    text-transform: none;
+    font-size: 20px;
   }
 }
